new down arrow .svg on sidebar

--- a/index.new.html
+++ b/index.new.html
@@ -18,7 +18,9 @@
     <p> Last updated 29/02/2025</p>
     <div class="sidebar">
         <h2 style="text-align: center;">latet version</h2>
-        <button class="accordion">Version 13.1 <span class="icon">⬇️</span></button>
+        <button class="accordion">Version 13.1 <span class="icon"><img
+                    src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg">
+            </span></button>
         <div class="panel">
             <ul>
                 <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v13.1">v13.1
@@ -30,7 +32,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 13 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 13 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v13">v13
@@ -40,7 +43,8 @@
                 </ul>
             </div>
             <hr>
-            <button class="accordion">Version 12.4 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12.4 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12.4">v12.4
@@ -51,7 +55,8 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.3.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12.3.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -63,7 +68,8 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.3 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12.3 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12.3">v12.3
@@ -74,7 +80,8 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12.2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12.2">v12.2
@@ -86,7 +93,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 12.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12.1">v12.1
@@ -98,7 +106,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 12 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 12 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v12">v12
@@ -110,7 +119,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3.2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.3.2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -123,7 +133,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.3.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -136,7 +147,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.3 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.3">v11.3
@@ -148,7 +160,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.2.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.2.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -161,7 +174,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.2">v11.2
@@ -173,7 +187,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1.2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.1.2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -186,7 +201,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.1.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a
@@ -199,7 +215,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.1">v11.1
@@ -211,7 +228,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 11 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11">v11
@@ -223,7 +241,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10.2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 10.2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.2">v10.2
@@ -235,7 +254,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 10.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1">v10.1
@@ -247,7 +267,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 10 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10">v10
@@ -259,7 +280,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 9 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 9 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v9">v9
@@ -271,7 +293,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 8.1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 8.1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v8.1">v8.1
@@ -283,7 +306,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 8 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 8 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v8">v8
@@ -295,7 +319,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 7 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 7 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v7">v7
@@ -307,7 +332,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 6 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 6 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v6">v6
@@ -319,7 +345,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 5 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 5 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v5">v5
@@ -331,7 +358,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 4 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 4 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v4">v4
@@ -343,7 +371,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 3 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 3 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v3">v3
@@ -355,7 +384,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 2 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 2 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v2">v2
@@ -367,7 +397,8 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 1 <span class="icon">⬇️</span></button>
+            <button class="accordion">Version 1 <span class="icon"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
                     <li><a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v1">v1
