--- a/index.new.html
+++ b/index.new.html
@@ -18,7 +18,7 @@
     <p> Last updated 29/02/2025</p>
     <div class="sidebar">
         <h2 style="text-align: center;">latet version</h2>
-        <button class="accordion">Version 13.1 <span class="icon"><img
+        <button class="accordion">Version 13.1 <span class="icon"><img class="svg_sidebar"
                     src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg">
             </span></button>
         <div class="panel">
@@ -32,7 +32,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 13 <span class="icon"><img
+            <button class="accordion">Version 13 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -43,7 +43,7 @@
                 </ul>
             </div>
             <hr>
-            <button class="accordion">Version 12.4 <span class="icon"><img
+            <button class="accordion">Version 12.4 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -55,7 +55,7 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.3.1 <span class="icon"><img
+            <button class="accordion">Version 12.3.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -68,7 +68,7 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.3 <span class="icon"><img
+            <button class="accordion">Version 12.3 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -80,7 +80,7 @@
             </div>
         <li>
             <hr>
-            <button class="accordion">Version 12.2 <span class="icon"><img
+            <button class="accordion">Version 12.2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -93,7 +93,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 12.1 <span class="icon"><img
+            <button class="accordion">Version 12.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -106,7 +106,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 12 <span class="icon"><img
+            <button class="accordion">Version 12 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -119,7 +119,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3.2 <span class="icon"><img
+            <button class="accordion">Version 11.3.2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -133,7 +133,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3.1 <span class="icon"><img
+            <button class="accordion">Version 11.3.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -147,7 +147,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.3 <span class="icon"><img
+            <button class="accordion">Version 11.3 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -160,7 +160,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.2.1 <span class="icon"><img
+            <button class="accordion">Version 11.2.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -174,7 +174,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.2 <span class="icon"><img
+            <button class="accordion">Version 11.2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -187,7 +187,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1.2 <span class="icon"><img
+            <button class="accordion">Version 11.1.2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -201,7 +201,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1.1 <span class="icon"><img
+            <button class="accordion">Version 11.1.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -215,7 +215,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11.1 <span class="icon"><img
+            <button class="accordion">Version 11.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -228,7 +228,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 11 <span class="icon"><img
+            <button class="accordion">Version 11 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -241,7 +241,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10.2 <span class="icon"><img
+            <button class="accordion">Version 10.2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -254,7 +254,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10.1 <span class="icon"><img
+            <button class="accordion">Version 10.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -267,7 +267,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 10 <span class="icon"><img
+            <button class="accordion">Version 10 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -280,7 +280,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 9 <span class="icon"><img
+            <button class="accordion">Version 9 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -293,7 +293,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 8.1 <span class="icon"><img
+            <button class="accordion">Version 8.1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -306,7 +306,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 8 <span class="icon"><img
+            <button class="accordion">Version 8 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -319,7 +319,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 7 <span class="icon"><img
+            <button class="accordion">Version 7 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -332,7 +332,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 6 <span class="icon"><img
+            <button class="accordion">Version 6 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -345,7 +345,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 5 <span class="icon"><img
+            <button class="accordion">Version 5 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -358,7 +358,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 4 <span class="icon"><img
+            <button class="accordion">Version 4 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -371,7 +371,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 3 <span class="icon"><img
+            <button class="accordion">Version 3 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -384,7 +384,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 2 <span class="icon"><img
+            <button class="accordion">Version 2 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -397,7 +397,7 @@
         </li>
         <li>
             <hr>
-            <button class="accordion">Version 1 <span class="icon"><img
+            <button class="accordion">Version 1 <span class="icon"><img class="svg_sidebar"
                         src="https://assets.hannahcodes.co.uk/images/logo/arrow-sm-down-light.svg"></span></button>
             <div class="panel">
                 <ul>
@@ -512,11 +512,11 @@
         <div class="version">
             <h2>V13</h2>
             <h3 class="version_date"> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/101"
-                    class="a_link">
-                    #101</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v13/index.html" class="a_link">
-                    website</a>
+                    class="a_link"><img src="https://assets.hannahcodes.co.uk/images/logo/github-light.svg">
+                    #101</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v13/index.html" class="a_link"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg"> website</a>
                 <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v13"
-                    class="a_link">
+                    class="a_link"><img src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a>
             </h3>
             <ul>
