more .svg added to <a> links

--- a/index.new.html
+++ b/index.new.html
@@ -2596,16 +2596,27 @@
         <div class="version">
             <h2>V7.0.0</h2>
             <h3 class="version_date"> 13/09/21-04/10/21 <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/7" class="a_link"> #7</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/6" class="a_link"> #6</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/5" class="a_link"> #5</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/4" class="a_link"> #4</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/3" class="a_link"> #3</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/2" class="a_link"> #2</a> <a
-                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/1" class="a_link"> #1</a> <a
-                    href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"> website</a><a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/7" class="a_link"><img
+                        class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">#7</a> <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/6" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #6</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/5" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #5</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/4" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #4</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/3" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #3</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/2" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #2</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/1" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    #1</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"><img
+                        class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">website</a><a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v7"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a>
             </h3>
             <ul>
@@ -2636,10 +2647,12 @@
         <div class="version">
             <h2>V6.0.0</h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v6/index.html"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v6"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a></h3>
             <ul>
                 <li>
@@ -2660,10 +2673,12 @@
         <div class="version">
             <h2>V5.0.0 </h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v5/index.html"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v5"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a></h3>
             <ul>
                 <li>
@@ -2685,10 +2700,12 @@
         <div class="version">
             <h2>V4.0.0 </h2>
             <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v4/index.html"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v4"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a></h3>
             <ul>
                 <li>
@@ -2703,10 +2720,12 @@
         <hr id="v3">
         <div class="version">
             <h2>V3.0.0 </h2>
-            <h3> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v3/desktop/index.html" class="a_link">
+            <h3> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v3/desktop/index.html" class="a_link"><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v3"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a>
             </h3>
             <ul>
@@ -2727,11 +2746,13 @@
         <hr id="v2">
         <div class="version">
             <h2>V2.0.0 </h2>
-            <h3 class="version_date"> 2021<a href="https://old.hannahcodes.co.uk/hannahcodes/v2/desktop/index.html"
-                    class="a_link">
+            <h3 class="version_date"> 2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v2/desktop/index.html"
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v2"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a></h3>
             <ul>
                 <li>
@@ -2755,10 +2776,12 @@
         <div class="version">
             <h2>V1.0.0 </h2>
             <h3 class="version_date">2021 <a href="https://old.hannahcodes.co.uk/hannahcodes/v1/desktop/index.html"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a> <a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v1"
-                    class="a_link">
+                    class="a_link"><img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a></h3>
             <ul>
                 <li>
