fixed v7 .svg aligment

--- a/index.new.html
+++ b/index.new.html
@@ -2611,9 +2611,9 @@
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
                     #2</a> <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/1" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    #1</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"><img
-                        class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">website</a><a
+                    #1</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v7/index.html" class="a_link"> <br><img
+                        class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
+                    website</a><a
                     href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v7"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
